changed index.html logic

--- a/index.html
+++ b/index.html
@@ -1,98 +1,13 @@
-<!DOCTYPE HTML>
-<!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>MRP Consulting - Coaching et conseil en entreprise</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
-
-		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="index.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
-					<!-- <h1><strong>I'm Morgan</strong>, an English business consultant specialising in cultural differences, employee well-being and effective management strategies. -->
-					<h1><strong>Je suis Morgan</strong>, consultant en affaires anglophone spécialisé dans les différences culturelles, le bien-être des employés et les stratégies de management efficaces.
-				</div>
-			</header>
-
-		<!-- Main -->
-			<div id="main">
-
-				<!-- One -->
-					<section id="one">
-						<div style="text-align: center;">
-  						<img src="images/logo.png" alt="" style="width: 40%; height: auto;" />
-						</div>
-						<div style="text-align: center; font-style: italic;">
-						<h2>Une communication claire, un leadership affirmé</h2>
-						</div>
-						<div style="text-align: center;">
-  							<a href="index-en.html">English</a> | 
-  							<a href="index.html">Français</a>
-						  <hr style="width: 115px; margin: 10px auto; border: 0.5px solid #ffffff;">
-						</div>
-						<ul class="actions">
-							<li><a href="index.html" class="button">Accueil</a></li>
-							<li><a href="about-fr.html" class="button">À propos de moi</a></li>
-							<li><a href="services-fr.html" class="button">Services</a></li>
-							<li><a href="testimonials-fr.html" class="button">Avis clients</a></li>
-						</ul>
-
-					<header class="major">
-					<h2>Salut, moi c'est Morgan 👋</h2>
-					</header>
-
-Consultant britannique avec plus de 20 ans d’expérience en développement logiciel, gestion de projet et leadership technique. Basé à Lyon, j’aide les entreprises à communiquer avec assurance et clarté en anglais, afin de renforcer leurs relations avec des clients, partenaires et parties prenantes internationaux.
-</br></br>
-Grâce à un accompagnement personnalisé en anglais des affaires, présentations, argumentaires de vente et négociations, j'améliore les compétences en communication et en leadership, tout en proposant des stratégies concrètes pour la gestion du temps, la résolution de problèmes et la réduction du stress.
-</br></br>
-Mon objectif est de fournir aux équipes et aux individus les outils nécessaires pour exceller à l’international, rester productifs et développer des compétences en leadership adaptées au succès global. Je suis spécialisé dans la clarté des messages, la résolution de conflits et la gestion proactive du stress et du burnout.
-</section>
-				<!-- Three -->
-					<section id="three">
-						<h2>Contact</h2>
-						Si vous pensez que mes services peuvent bénéficier à votre entreprise, contactez-moi et rencontrons-nous</p>
-						<div class="row">
-							<div class="col-4 col-12-small">
-								<ul class="labeled-icons">
-									<li>
-										<h3><a href="mailto:morgan@mrpconsulting.fr" class="icon solid fa-envelope"></h3></a>
-										<a href="mailto:morgan@mrpconsulting.fr">morgan@mrpconsulting.fr</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</section>
-
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<div class="labeled-icons">
-						<ul class="labeled-icons"><li><a href="mailto:morgan@mrpconsulting.fr" class="icon solid fa-envelope"><span class="label">Email</span></a>
-							<a href="mailto:morgan@mrpconsulting.fr" class="label">morgan@mrpconsulting.fr</a>
-						</li></ul>
-					</div>
-					<ul class="copyright">
-						<li>&copy; Morgan Pugh 2018 - 2025. All rights reserved</li>
-						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Redirecting...</title>
+  <meta http-equiv="refresh" content="0; url=https://mrpconsulting.fr/index-fr.html">
+  <script>
+    window.location.replace("https://mrpconsulting.fr/index-fr.html");
+  </script>
+</head>
+<body>
+</body>
 </html>
