--- a/testimonials-en.html
+++ b/testimonials-en.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
+					<a href="index-en.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
 					<h1><strong>I'm Morgan</strong>, an English business consultant specialising in cultural differences, employee well-being and effective management strategies.
 				</div>
 			</header>
@@ -38,7 +38,7 @@
 						  <hr style="width: 115px; margin: 10px auto; border: 0.5px solid #ffffff;">
 						</div>
 						<ul class="actions">
-							<li><a href="index.html" class="button">Home</a></li>
+							<li><a href="index-en.html" class="button">Home</a></li>
 							<li><a href="about-en.html" class="button">About Me</a></li>
 							<li><a href="services-en.html" class="button">Services</a></li>
 							<li><a href="testimonials-en.html" class="button">Testimonials</a></li>
