--- a/about-en.html
+++ b/about-en.html
@@ -38,7 +38,7 @@
 						  <hr style="width: 115px; margin: 10px auto; border: 0.5px solid #ffffff;">
 						</div>
 						<ul class="actions">
-							<li><a href="index.html" class="button">Home</a></li>
+							<li><a href="index-en.html" class="button">Home</a></li>
 							<li><a href="about-en.html" class="button">About Me</a></li>
 							<li><a href="services-en.html" class="button">Services</a></li>
 							<li><a href="testimonials-en.html" class="button">Testimonials</a></li>
