another index.html approac

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>Redirecting...</title>
-  <meta http-equiv="refresh" content="0; url=https://mrpconsulting.fr/index-fr.html">
+  <title></title>
   <script>
     window.location.replace("https://mrpconsulting.fr/index-fr.html");
   </script>
+  <noscript>
+    <meta http-equiv="refresh" content="0;url=https://mrpconsulting.fr/index-fr.html">
+  </noscript>
 </head>
-<body>
-</body>
+<body></body>
 </html>
